# fvs-containers

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: architect.agent.md  data-explorer.agent.md  implementer.agent.md  qa.agent.md
.github/workflows/: ci.yaml  (+2 more)
cluster/: README.md  build_sif.sh  fvs_array.sbatch  fvs_run_one.sh  hellgate_probe.sh  run_local.sh
data/: README.md
docker/: Dockerfile  Dockerfile.fvs  Dockerfile.webgui  webgui-app.R  webgui-entrypoint.sh  webgui-launch.R
docs/: ASSESSMENT.md  BUILD.md  ENVIRONMENT_SETUP.md  HANDOFF.md  HELLGATE_FVS.md  IMPLEMENTATION_PHASE1.md  IMPLEMENTATION_PHASE2.md  IMPLEMENTATION_PHASE3.md  IMPLEMENTATION_PHASE5.md  IMPLEMENTATION_REPORT_PHASE5.md  PROJECT_STATUS.md  REVIEW_2026-06-02.md  UPSTREAM_REVIEW.md  WORKFLOW.md  monte_carlo_report.md  plan_assignment5_completion.md  plan_database_input.md  plan_monte_carlo.md  presentation_outline.md
notebooks/: Assignment5.ipynb  MonteCarloReport.ipynb
patches/: README.md  fvsOL-rsqlite-temp-tables.patch  fvsOL-staged-install.patch  rFVS-encoding.patch
renv/: settings.json
scripts/: analyze_assignment5.py  apply_fvsol_patch.sh  build_fvs.sh  build_images.sh  demo_monte_carlo_phase1.py  demo_monte_carlo_phase2.py  demo_monte_carlo_phase3.py  dev-setup.sh  run_assignment5.py  run_fvs_lubrecht_plot48.py  run_webgui.sh  smoke_test.R
tests/: run_tests.R
(+12 files in other folders)
