[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fvs-tools"
version = "0.1.0"
description = "Python tooling for batch Forest Vegetation Simulator (FVS) runs and Monte Carlo experiments."
readme = "src/fvs_tools/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core: the fvs_tools library uses only pandas; the scripts/ utilities also use
# numpy and read .xlsx inventory inputs (openpyxl is pandas' Excel engine).
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "nbval>=0.11",
]
# For the analysis notebooks (notebooks/*.ipynb).
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.20",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fvs_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (slow, run actual FVS)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by the formatter
